# RepIQ

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
apps/api/: package.json
apps/api/src/: index.ts
apps/engine/: README.md  pyproject.toml
apps/engine/app/: analyzer.py  badges.py  exercise_catalog.json  exercise_lookup.py  goals.py  ingest.py  main.py  metrics.py  models.py  overload.py  patterns.py
apps/engine/tests/: test_engine.py
apps/engine/tests/fixtures/: hevy_sample.csv
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  catalog.ts  demoData.ts  storage.ts  styles.css  types.ts
apps/web/src/analytics/: dateRange.ts  insightCopy.ts  insightMode.ts
docs/: Exercise_Schema.md  Exercise_list_extracted.txt  adaptive-experience-guidelines.md  algorithms.md  analytics-insight-model.md  analytics-plan-updated_v2.md  api-and-sequences.md  architecture.md  exercise-taxonomy.csv  navigation-map.md  product-management.md  project-status.md  psych-layer.md  session-plan.md  smart-replace.md  test-cases.md  training-trend-messages.md  v1-roadmap.md
infra/supabase/: README.md
infra/supabase/migrations/: 0001_initial_schema.sql
scripts/: screenshots.mjs
