[project]
name = "repiq-engine"
version = "0.1.0"
description = "Rule-based coaching engine for RepIQ"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.10.0",
  "uvicorn>=0.34.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

